# annx

./: .gitignore  .ycm_extra_conf.py  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
annx/: __init__.py  ext.cpp  ext.pyx  gauss_lsh.pxd  space.pxd
annx/gauss_lsh/: LSHSpace.pxd
annx/pyann/: containers.py  gauss.py
docs/: Makefile  conf.py  index.rst
src/c++/: .ycm_extra_conf.py  CMakeLists.txt  README.md
src/c++/cmake/: Dependencies.cmake
src/c++/cmake/Modules/: CheckSSEFeatures.cmake
src/c++/src/: CMakeLists.txt
src/c++/src/ann/: CMakeLists.txt  auss_lsh.h  gauss_lsh.h  linear_space.h  main.cc  main.cpp  space.cc  space.h  spark_rdd.h
src/c++/src/annx/: CMakeLists.txt  gauss_lsh.h  linear_space.h  main.cc  space.cc  space.h  spark_rdd.h
src/c++/src/common/: ann_util.cc  ann_util.h  base64.cc  base64.h
src/c++/test/: CMakeLists.txt  test_ann.cc  test_foo.cc
src/python/annx/: ext.cpp  ext.pyx
src/python/annx/gauss_lsh/: LSHSpace.pxd  SpaceInput.pxd  SpaceResult.pxd
test/: test_lsh.py
tests/: test_indexer.py
